test/cases/compile_errors/reify_type_for_exhaustive_enum_with_non-integer_tag_type.zig
const Tag = @Type(.{
    .Enum = .{
        .tag_type = bool,
        .fields = &.{},
        .decls = &.{},
        .is_exhaustive = false,
    },
});
export fn entry() void {
    _ = @as(Tag, @enumFromInt(0));
}

// error
// backend=stage2
// target=native
//
// :1:13: error: Type.Enum.tag_type must be an integer type
